fix slider navigation on mobile

--- a/assets/src/css/components/tiny-slider.pcss
+++ b/assets/src/css/components/tiny-slider.pcss
@@ -91,79 +91,138 @@
 
 .tns-controls [aria-controls] {
     text-indent: -9999px;
-    background: none;
-    width: 0;
-    height: 0;
-    border-style: solid;
+    background: var(--gray-dark);
+    width: 42px;
+    height: 42px;
     outline: none;
-    transition: all .3s;
     position: absolute;
+    top: 50%;
+    margin-top: -21px;
+    border: none;
+
+    @media (--md-viewport) {
+        width: 52px;
+        height: 52px;
+        margin-top: -25px;
+        transition: all .3s;
+    }
 
     &[data-controls="prev"] {
-        border-width: 15px 38px 15px 0;
-        border-color: transparent var(--gray-dark) transparent transparent;
-        margin-right: 25px;
         left: 0;
-        top: 50%;
-        margin-top: -18px;
+
+        &::before {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            left: 5px;
+            top: 50%;
+            margin-top: -14px;
+            border-style: solid;
+            border-width: 15px 38px 15px 0;
+            border-color: transparent var(--white) transparent transparent;
+        }
 
         &::after {
             content: '';
             position: absolute;
-            right: -38px;
-            top: -14px;
+            left: 33px;
+            top: 50%;
+            margin-top: -14px;
             width: 0;
             height: 0;
             border-style: solid;
             border-width: 15px 10px 15px 0;
-            border-color: transparent var(--gray-light) transparent transparent;
-        }
+            border-color: transparent var(--gray-dark) transparent transparent;
 
-        &:hover {
-            border-color: transparent var(--red) transparent transparent;
-        }
-
-        @media (--max-767-viewport) {
-                border-width: 18px 22px 18px 0;
-                &::after {
-                    content: none;
-                }
+            @media (--md-viewport) {
+                transition: all .3s;
             }
-    }
-
-    &[data-controls="next"] {
-        border-width: 15px 0 15px 38px;
-        border-color: transparent transparent transparent var(--gray-dark);
-        margin-left: 25px;
-        right: 0;
-        top: 50%;
-        margin-top: -18px;
-
-        &::after {
-            content: '';
-            position: absolute;
-            left: -38px;
-            top: -14px;
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 15px 0 15px 10px;
-            border-color: transparent transparent transparent var(--gray-light);
         }
 
         @media (--md-viewport) {
             &:hover {
-                border-color: transparent transparent transparent var(--red);
+                background: var(--red);
+
+                &::after {
+                    border-color: transparent var(--red) transparent transparent;
+                }
             }
         }
 
         @media (--max-767-viewport) {
-                border-width: 18px 0 18px 22px;
+
+            &::before {
+                border-width: 15px 28px 15px 0;
+            }
+
+            &::after {
+                left: 23px;
+            }
+
+            .end-padding-slider & {
+                top: 18.2%;
+               }
+            }
+    }
+
+    &[data-controls="next"] {
+        right: 0;
+
+        &::before {
+            content: '';
+            width: 0;
+            height: 0;
+            transition: all .3s;
+            position: absolute;
+            right: 5px;
+            top: 50%;
+            margin-top: -14px;
+            border-style: solid;
+            border-width: 15px 0 15px 38px;
+            border-color: transparent transparent transparent var(--white);
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            right: 33px;
+            top: 50%;
+            margin-top: -14px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 15px 0 15px 10px;
+            border-color: transparent transparent transparent var(--gray-dark);
+
+            @media (--md-viewport) {
+                transition: all .3s;
+            }
+        }
+
+        @media (--md-viewport) {
+            &:hover {
+                background: var(--red);
 
                 &::after {
-                    content: none;
+                    border-color: transparent transparent transparent var(--red);
                 }
+            }
+        }
 
+        @media (--max-767-viewport) {
+
+            &::before {
+                border-width: 15px 0 15px 28px;
+            }
+
+            &::after {
+                right: 23px;
+            }
+
+            .end-padding-slider & {
+                top: 18.2%;
+            }
         }
     }
 }
